--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   cloud_firestore: ^4.15.9
   firebase_auth: ^4.17.6
   firebase_core: ^2.25.5
+  firebase_storage: ^11.7.0
   flutter:
     sdk: flutter
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
